--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,7 +12,7 @@
                 <p class="intro">
                     Welcome to my portfolio! I am a passionate web developer skilled in creating dynamic, responsive, and high-quality web applications. Explore my work and get to know more about what I do.
                 </p>
-                <a href="/assets/resume.pdf" class="resume-button" target="_blank">Download Resume</a>
+                <a href="/assets/resume.pdf" class="resume-button" target="_blank" download>Download Resume</a>
             </div>
         </mat-card-content>
     </mat-card>
